--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-adium-theme-ubuntu (0.3.4)
-astroid (1.6.5)
-backports.functools-lru-cache (1.5)
-configparser (3.5.0)
-dnspython (1.12.0)
-enum34 (1.1.6)
-futures (3.2.0)
-isort (4.3.4)
-lazy-object-proxy (1.3.1)
-mccabe (0.6.1)
-pip (8.1.1)
-pycrypto (2.6.1)
-pylint (1.9.2)
-setuptools (20.7.0)
-singledispatch (3.4.0.3)
-six (1.11.0)
-unity-lens-photos (1.0)
-wheel (0.29.0)
-wrapt (1.10.11)
+Package         Version
+--------------- -------
+arrow           0.12.1 
+atomicwrites    1.1.5  
+attrs           18.1.0 
+Django          2.0.6  
+more-itertools  4.2.0  
+pip             10.0.1 
+pkg-resources   0.0.0  
+pluggy          0.6.0  
+psycopg2        2.7.4  
+py              1.5.4  
+pytest          3.6.2  
+pytest-html     1.19.0 
+pytest-metadata 1.7.0  
+python-dateutil 2.7.3  
+pytz            2018.4 
+setuptools      39.2.0 
+six             1.11.0 
+wheel           0.31.1 
